Transformation de currentTurnPlayer en ObjectProperty